--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "CC BY-NC 4.0",
   "bugs": {
     "url": "https://github.com/qay2005/Dad-Bot/issues"
   },
