--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@discordjs/opus": "^0.4.0",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "ffmpeg-static": "^4.2.7"
+    "ffmpeg-static": "^4.2.7",
+    "monk": "^7.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
